feat: Add user login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,3 +41,6 @@ en:
     create:
       success: User created successfully.
       error: An error occurred while trying to save the user. Please check the data and try again.
+  sessions:
+    create:
+      error: Email or password invalids.
